# StageMonitor

./: .gitignore  pyproject.toml
backend/: app.py  facet_query.py
backend/templates/: index.html
frontend/: index.html
